Version 2.1.0
=============

This is a minor release.

New features:
-------------

- NV_ALLOW_OWN_GPU_REUSE allows users to run further containers on GPUs they
  already use. Will only happen when explicitly requesting a GPU via NV_GPU, not
  when implicitly assigning a new GPU.

Minor improvements:
-------------------

- Print warnings in case no config.py is found, #2
- Enhanced docs for mounting /etc/{passwd,group} for uid to username mappings in
  containers, #5
- Help now lists available mounts and allowed images

Bug fixes:
----------

- Removed allow_abbrev to allow flag combinations, #3
- Fixed parsing dups bug in ARGS_AVAILABLE and ARGS_ALWAYS, #4



Version 2.0.0
=============

This is a major release.

Backwards incompatibilities:
----------------------------

- VOLUME_MOUNT config vars could previously include {USER} and {HOME} strings.
  This is now replaced by user_name and user_home python variables that can be
  used throughout all config files (and in all settings, not only mounts).
- HOME env var in containers is set to user_home by default now.
- Executor nvidia-docker now includes configurable limits to NV_GPU env var.
  Before the default was to always make all GPUs available (see new config
  options below).
- PRIVILEGED dropped (use ARGS_AVAILABLE, but let me know how this is useful
  with userdocker!)
- ALLOWED_PUBLISH_PORTS_ALL dropped (use ARGS_AVAILABLE)

New features:
-------------

- Config files now support python variables: uid, gid, user_name, group_name and
  user_home.
- userdocker version command will include userdocker version information.
- Use of DOCKER_HOST env var will raise an ERROR.
- Users can now re-attach to their previously started containers (in case of
  connection loss for example).
- ALLOWED_PORT_MAPPINGS config var to allow configurable explicit user port
  publishing (docker run -p). Defaults to selectable container ports that are
  mappable to random host port (like in -P), but user can decide if host local